--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
 
       --radius: 24px;
       --max: 1200px;
-      --heroMax: 1560px;
 
       /* warm garland palette */
       --warm1: rgba(255,196,120,1);
@@ -34,7 +33,6 @@
       --warm3: rgba(255,115,115,1);
       --warm4: rgba(255,214,120,1);
 
-      /* patterns */
       --scratch: url("data:image/svg+xml,%3Csvg%20xmlns='http://www.w3.org/2000/svg'%20width='260'%20height='260'%20viewBox='0%200%20260%20260'%3E%3Cg%20fill='none'%20stroke='%23ffffff'%20stroke-opacity='.10'%20stroke-width='7'%20stroke-linecap='round'%3E%3Cpath%20d='M40,240%20C85,170%20115,115%20155,40'/%3E%3Cpath%20d='M80,250%20C120,175%20155,125%20210,45'/%3E%3Cpath%20d='M25,220%20C70,165%2095,125%20125,75'/%3E%3C/g%3E%3C/svg%3E");
 
       --icicles: url("data:image/svg+xml,%3Csvg%20xmlns='http://www.w3.org/2000/svg'%20width='700'%20height='64'%20viewBox='0%200%20700%2064'%3E%3Cdefs%3E%3ClinearGradient%20id='g'%20x1='0'%20y1='0'%20x2='0'%20y2='1'%3E%3Cstop%20offset='0'%20stop-color='%23ffffff'%20stop-opacity='.18'/%3E%3Cstop%20offset='1'%20stop-color='%23ffffff'%20stop-opacity='0'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect%20x='0'%20y='0'%20width='700'%20height='10'%20fill='%23ffffff'%20opacity='.08'/%3E%3Cpath%20d='M0%2010%20C35%2010%2060%2048%2090%2048%20C120%2048%20120%2020%20155%2020%20C190%2020%20190%2060%20225%2060%20C260%2060%20260%2024%20295%2024%20C330%2024%20330%2052%20365%2052%20C400%2052%20405%2018%20440%2018%20C475%2018%20480%2046%20510%2046%20C540%2046%20540%2022%20575%2022%20C610%2022%20610%2058%20645%2058%20C670%2058%20685%2030%20700%2030%20V10%20Z'%20fill='url(%23g)'/%3E%3C/svg%3E");
@@ -98,7 +96,7 @@
       filter: blur(.12px);
     }
 
-    /* снег (за карточками) */
+    /* snow behind cards */
     .snow{
       position:fixed; inset:0; z-index:-9;
       pointer-events:none;
@@ -131,7 +129,7 @@
       background: rgba(5,7,13,.55);
       border-bottom:.5px solid var(--line);
       isolation:isolate;
-      padding-bottom: 42px; /* место под гирлянду */
+      padding-bottom: 42px;
     }
     header::after{
       content:"";
@@ -145,7 +143,7 @@
       z-index:1;
     }
 
-    /* гирлянда: провода тёмные, лампы мягко светят */
+    /* garland */
     .garlandStrip{
       position:absolute;
       left:0; right:0;
@@ -196,14 +194,8 @@
         drop-shadow(0 10px 26px rgba(255,160,100,.10));
       animation: glowBreath2 4.4s ease-in-out infinite;
     }
-    @keyframes glowBreath{
-      0%,100%{opacity:.86}
-      50%{opacity:1}
-    }
-    @keyframes glowBreath2{
-      0%,100%{opacity:.28}
-      50%{opacity:.42}
-    }
+    @keyframes glowBreath{ 0%,100%{opacity:.86} 50%{opacity:1} }
+    @keyframes glowBreath2{ 0%,100%{opacity:.28} 50%{opacity:.42} }
 
     .wrap{
       max-width:var(--max);
@@ -214,8 +206,7 @@
     .nav{
       display:flex; align-items:center; justify-content:space-between;
       gap:12px; min-height:72px; padding:10px 0;
-      position:relative;
-      z-index:30;
+      position:relative; z-index:30;
     }
     .brand{
       display:flex; align-items:center; gap:12px;
@@ -281,7 +272,6 @@
     .menuBtn:hover{transform: translateY(-1px)}
     .menuBtn svg{width:18px;height:18px;opacity:.92}
 
-    /* mobile menu overlay */
     .mnav{
       position:fixed; inset:0; z-index:2000;
       display:none;
@@ -324,38 +314,54 @@
     }
 
     section{padding:84px 0}
+
+    /* HERO */
     .hero{
       position:relative;
       padding:64px 0 44px;
-      min-height: calc(100vh - 114px); /* чтобы фон/картинка "дотягивалась" вниз */
+      min-height: calc(100vh - 114px);
       overflow:hidden;
       isolation:isolate;
     }
 
-    /* HERO IMAGE (hero.png рядом с HTML) */
+    /* ✅ DESKTOP HERO: hero-desktop.png, static (fixed), no dark overlay */
     .heroBg{
       position:absolute; inset:0;
       z-index:-5;
-      background-image: url("hero.png");
+      background-image: url("hero-desktop.png");
       background-size: cover;
       background-position: 78% 42%;
-      /* ОСВЕТЛИЛ ПОЛНОСТЬЮ (без затемнения) */
-      filter: brightness(1.25) saturate(1.10) contrast(1.03);
-      transform: scale(1.02);
+      background-repeat:no-repeat;
+      transform: none; /* no scaling */
+      filter: none;    /* no darkening */
+    }
+    @media (min-width: 980px){
+      .heroBg{ background-attachment: fixed; } /* static on desktop */
+    }
+    @media (max-width: 979px){
+      .heroBg{ background-attachment: scroll; }
     }
 
-    /* очень лёгкая премиальная "вуаль" (не затемняет картинку) */
+    /* ✅ MOBILE пока оставляем hero.png (потом заменишь на 9:16) */
+    @media (max-width: 520px){
+      .heroBg{
+        background-image: url("hero.png");
+        background-position: 60% 40%;
+        background-attachment: scroll;
+      }
+    }
+
+    /* minimal premium highlight (does NOT darken) */
     .heroShade{
       position:absolute; inset:0;
       z-index:-4;
       pointer-events:none;
       background:
-        radial-gradient(900px 420px at 35% 55%, rgba(255,255,255,.10), rgba(255,255,255,0) 60%),
-        linear-gradient(90deg, rgba(5,7,13,.30) 0%, rgba(5,7,13,.10) 55%, rgba(5,7,13,.20) 100%);
+        radial-gradient(900px 420px at 35% 55%, rgba(255,255,255,.10), rgba(255,255,255,0) 60%);
       opacity:.55;
     }
 
-    /* лёгкий цветной переход к общему фону */
+    /* bottom blend + seam blur (smooth transition) */
     .heroBlend{
       position:absolute;
       left:-10%; right:-10%;
@@ -368,8 +374,6 @@
         linear-gradient(180deg, rgba(5,7,13,0) 0%, rgba(5,7,13,.55) 70%, rgba(5,7,13,1) 100%);
       opacity:.9;
     }
-
-    /* ✅ НОВОЕ: размытый "шов" (размывает фото+фон внизу) */
     .heroSeam{
       position:absolute;
       left:-8%;
@@ -388,8 +392,6 @@
       background: linear-gradient(180deg, rgba(255,255,255,.06), rgba(255,255,255,0));
       opacity: .9;
     }
-
-    /* ✅ НОВОЕ: мягкая нижняя дымка */
     .heroFadeBottom{
       position:absolute;
       left:-10%;
@@ -416,7 +418,7 @@
       gap:14px;
     }
 
-    /* cards */
+    /* ✅ Cards (with glass blur restored) */
     .card{
       border-radius:var(--radius);
       border:1px solid var(--line2);
@@ -430,6 +432,9 @@
       transform: translateZ(0);
       transition: transform .22s ease, box-shadow .22s ease, border-color .22s ease;
       will-change: transform;
+
+      backdrop-filter: blur(16px) saturate(1.08);
+      -webkit-backdrop-filter: blur(16px) saturate(1.08);
     }
     .cardGlow{
       position:absolute;
@@ -587,7 +592,6 @@
       line-height:1.6;
     }
 
-    /* promo bar */
     .promoWrap{
       margin-top: 18px;
       display:flex;
@@ -623,11 +627,9 @@
     .codeValue{font-size: 22px;font-weight: 1100;letter-spacing: 1.6px;color: rgba(238,242,255,.96);text-transform: uppercase;}
     .copyHint{font-size: 12px;color: rgba(238,242,255,.62);white-space: nowrap;}
 
-    /* reveal */
     .reveal{opacity:0; transform: translateY(18px); transition: opacity .7s ease, transform .7s ease;}
     .reveal.on{opacity:1; transform: translateY(0)}
 
-    /* quick start */
     .sectionTitle{
       display:flex; align-items:flex-end; justify-content:space-between;
       gap:12px; margin-bottom:16px;
@@ -710,7 +712,6 @@
     .actions2{display:flex; gap:10px; flex-wrap:wrap; margin-top:10px}
     .actions2 .btn{flex:1; min-width:0}
 
-    /* About accordion */
     .aboutAccordion{
       border-radius:22px;
       border:1px solid rgba(255,255,255,.12);
@@ -752,7 +753,6 @@
     .miniCard p{margin:0; color: var(--muted); font-size:13.5px; line-height:1.65}
     .miniCard ul{margin:10px 0 0; padding-left:18px; color: var(--muted); font-size:13.5px; line-height:1.65}
 
-    /* FAQ */
     .faqGrid{display:grid; grid-template-columns: 1fr 1fr; gap:12px}
     .faqGrid details{
       background:rgba(255,255,255,.04);
@@ -777,7 +777,6 @@
     .foot a{color:rgba(238,242,255,.70)}
     .foot a:hover{color:var(--text)}
 
-    /* floating CTA */
     .float{
       position:fixed; right:16px; bottom:16px; z-index:1200;
       display:flex; align-items:center; gap:10px;
@@ -806,7 +805,6 @@
     }
     .float:hover .go{transform: translateY(-1px)}
 
-    /* toast */
     .toast{
       position:fixed;left:50%;bottom:18px;transform: translateX(-50%);
       background: rgba(5,7,13,.78);
@@ -832,7 +830,6 @@
       font-weight:1000;
     }
 
-    /* responsive */
     @media (max-width: 1100px){
       .grid2{grid-template-columns:1fr}
       .aboutGrid{grid-template-columns: 1fr}
@@ -851,10 +848,9 @@
 
     @media (max-width: 520px){
       section{padding:66px 0}
-      .hero{padding:52px 0 34px; min-height: calc(92vh - 110px);} /* компактнее на телефоне */
+      .hero{padding:52px 0 34px; min-height: calc(92vh - 110px);}
       .wrap{padding:0 14px}
 
-      .heroBg{background-position: 74% 36%; transform: scale(1.04);}
       .heroMain{padding:18px}
       .lead{font-size:15.5px}
       .chips{gap:8px}
@@ -866,12 +862,17 @@
       .snow{opacity:.12; animation-duration: 26s;}
     }
 
-    /* PERFORMANCE / FIX for mobile: no hover move, no tilt, no highlight-lag */
+    /* mobile performance */
     @media (hover: none), (pointer: coarse){
       .card:hover, .miniCard:hover{transform:none}
       .tilt:hover .shine{opacity:0}
       .btn:hover{transform:none}
+      .btn:active{transform:none} /* no "jump" on tap */
       .qbtn:hover{transform:none}
+      .card{
+        backdrop-filter: blur(12px) saturate(1.06);
+        -webkit-backdrop-filter: blur(12px) saturate(1.06);
+      }
     }
 
     @media (prefers-reduced-motion: reduce){
@@ -884,6 +885,7 @@
       .card, .miniCard{transition:none}
       .garlandStrip::before, .garlandStrip::after{animation:none}
       .btn.primary{animation:none}
+      .heroBg{background-attachment: scroll;}
     }
   </style>
 </head>
@@ -925,7 +927,6 @@
     <div class="garlandStrip" aria-hidden="true"></div>
   </header>
 
-  <!-- mobile nav -->
   <div class="mnav" id="mnav" aria-hidden="true">
     <div class="panel">
       <div class="row">
@@ -1116,7 +1117,6 @@
           </div>
         </div>
 
-        <!-- На телефоне закрыто, на ПК автоматически откроется (см. JS) -->
         <details class="aboutAccordion reveal" id="aboutAcc">
           <summary>
             Раздел «О 1win» — открыть / закрыть
@@ -1127,59 +1127,57 @@
             <div class="aboutGrid">
               <div class="miniCard">
                 <h3>Помощь игрокам</h3>
-                <p>Поддержка работает 24/7. Можно обратиться быстро и без лишних шагов:</p>
+                <p>Поддержка работает 24/7. Можно обратиться быстро и без лишних шагов.</p>
                 <ul>
-                  <li>онлайн-чат на главной странице</li>
-                  <li>email или номер телефона</li>
+                  <li>онлайн-чат на сайте</li>
+                  <li>email или телефон</li>
                 </ul>
               </div>
 
               <div class="miniCard">
                 <h3>Бонусы в 1Win</h3>
-                <p>Бонусная программа включает поощрения за депозиты и акции для новых игроков.</p>
+                <p>Программы поощрения и акции для новых игроков — смотри условия на стороне 1win.</p>
                 <ul>
-                  <li>приветственный бонус суммарно до 500% за первые пополнения</li>
-                  <li>кэшбэк 1–20% от проигрыша за неделю (по правилам)</li>
+                  <li>приветственные бонусы</li>
+                  <li>акции по правилам</li>
                 </ul>
               </div>
 
               <div class="miniCard">
                 <h3>Игры в 1Win</h3>
-                <p>Большой выбор игр с понятной навигацией и разными режимами.</p>
+                <p>Слоты, live-казино, рулетки и карточные игры — быстрый доступ и удобная навигация.</p>
                 <ul>
-                  <li>рулетки/карточные игры (классика и вариации)</li>
-                  <li>live-казино с дилером</li>
-                  <li>слоты с разной тематикой и RTP</li>
+                  <li>live-столы</li>
+                  <li>слоты разных провайдеров</li>
+                  <li>классика казино</li>
                 </ul>
               </div>
 
               <div class="miniCard">
                 <h3>Мобильная версия и приложение</h3>
-                <p>Платформа корректно работает на смартфонах. Вход тот же — повторная регистрация не нужна.</p>
+                <p>Работает на смартфонах. Повторная регистрация не нужна — вход тот же.</p>
                 <ul>
-                  <li>мобильная версия в браузере</li>
-                  <li>приложение для Android (по ссылке на сайте)</li>
-                  <li>не забывай обновлять ПО</li>
+                  <li>браузерная версия</li>
+                  <li>Android-приложение</li>
+                  <li>обновления по мере выхода</li>
                 </ul>
               </div>
 
               <div class="miniCard">
-                <h3>Платежи на сайте</h3>
-                <p>Пополнение обычно моментально и без комиссии, вывод — зависит от метода.</p>
+                <h3>Платежи</h3>
+                <p>Пополнение и вывод зависят от метода. Проверяй лимиты и сроки на стороне 1win.</p>
                 <ul>
-                  <li>карты/кошельки/электронные системы</li>
-                  <li>в разделе «Финансы» выбираешь пополнение или вывод</li>
-                  <li>шифрование и защита транзакций</li>
+                  <li>карты/кошельки/системы</li>
+                  <li>раздел «Финансы»</li>
                 </ul>
               </div>
 
               <div class="miniCard">
                 <h3>Игровой зал</h3>
-                <p>Красочная графика, бонус-раунды и разные ставки — удобно и на ПК, и на телефоне.</p>
+                <p>Красочная графика, разные ставки и режимы (где доступны) — удобно и на ПК, и на телефоне.</p>
                 <ul>
-                  <li>ручной или авто-режим</li>
-                  <li>демо для знакомства (где доступно)</li>
-                  <li>без вмешательства в процесс (по заявленным правилам)</li>
+                  <li>ручной/авто режим</li>
+                  <li>демо (где доступно)</li>
                 </ul>
               </div>
             </div>
@@ -1200,27 +1198,27 @@
         <div class="faqGrid reveal">
           <details>
             <summary>1. Безопасно ли играть на сайте 1Вин?</summary>
-            <p>Платформа заявляет защиту персональных данных и соблюдение политики конфиденциальности. Также указана лицензия Кюрасао №8048/JAZ2018-040. Перед игрой проверь актуальные сведения и правила на стороне 1win.</p>
+            <p>Платформа заявляет защиту данных. Перед игрой проверь актуальные сведения и правила на стороне 1win.</p>
           </details>
 
           <details>
             <summary>2. Во что можно сыграть в 1Win?</summary>
-            <p>Доступны слоты, рулетки, покер, баккара, live-казино с дилером и другие форматы. Навигация помогает быстро найти нужную игру.</p>
+            <p>Слоты, live-казино, рулетки и карточные игры. Выбор зависит от доступности в твоём регионе.</p>
           </details>
 
           <details>
-            <summary>3. Зачем 1Вин запрашивает верификацию?</summary>
-            <p>Обычно — для подтверждения возраста и защиты аккаунта. Может потребоваться документ (скан/фото) по правилам платформы.</p>
+            <summary>3. Зачем нужна верификация?</summary>
+            <p>Обычно — подтверждение возраста и защита аккаунта. Может потребоваться документ по правилам платформы.</p>
           </details>
 
           <details>
             <summary>Где вводить промокод SMOG?</summary>
-            <p>Промокод <b>SMOG</b> вводится <b>при регистрации</b>. Можно скопировать его на этой странице одним нажатием.</p>
+            <p>Промокод <b>SMOG</b> вводится <b>при регистрации</b>. Его можно скопировать одним нажатием на странице.</p>
           </details>
 
           <details>
             <summary>Что делать, если бонус не начислился?</summary>
-            <p>Проверь: промокод введён при регистрации, выполнены требования по депозиту/активации. Если всё ок — напиши в поддержку 24/7 (чат/почта).</p>
+            <p>Проверь: промокод введён при регистрации, выполнены правила бонуса. Если всё ок — напиши в поддержку.</p>
           </details>
 
           <details>
@@ -1291,9 +1289,7 @@
     const mnavClose = document.getElementById("mnavClose");
     menuBtn?.addEventListener("click", () => mnav.classList.add("open"));
     mnavClose?.addEventListener("click", () => mnav.classList.remove("open"));
-    mnav?.addEventListener("click", (e) => {
-      if (e.target === mnav) mnav.classList.remove("open");
-    });
+    mnav?.addEventListener("click", (e) => { if (e.target === mnav) mnav.classList.remove("open"); });
     mnav?.querySelectorAll("a").forEach(a => a.addEventListener("click", ()=> mnav.classList.remove("open")));
 
     // smooth scroll
@@ -1416,13 +1412,12 @@
     function syncAbout(){
       const isMobile = matchMedia("(max-width: 720px)").matches;
       if (!aboutAcc) return;
-      if (isMobile) aboutAcc.open = false;
-      else aboutAcc.open = true;
+      aboutAcc.open = !isMobile;
     }
     addEventListener("resize", syncAbout, {passive:true});
     syncAbout();
 
-    // Tilt: только для мыши/hover (на телефоне НЕ включаем)
+    // Tilt: only for desktop mouse
     const allowTilt = matchMedia("(hover: hover) and (pointer: fine)").matches;
     if (allowTilt){
       const tiltEls = [...document.querySelectorAll("[data-tilt]")];
