--- a/index.html
+++ b/index.html
@@ -33,12 +33,9 @@
       --warm3: rgba(255,115,115,1);
       --warm4: rgba(255,214,120,1);
 
-      --scratch: url("data:image/svg+xml,%3Csvg%20xmlns='http://www.w3.org/2000/svg'%20width='260'%20height='260'%20viewBox='0%200%20260%20260'%3E%3Cg%20fill='none'%20stroke='%23ffffff'%20stroke-opacity='.10'%20stroke-width='7'%20stroke-linecap='round'%3E%3Cpath%20d='M40,240%20C85,170%20115,115%20155,40'/%3E%3Cpath%20d='M80,250%20C120,175%20155,125%20210,45'/%3E%3Cpath%20d='M25,220%20C70,165%2095,125%20125,75'/%3E%3C/g%3E%3C/svg%3E");
-
       --icicles: url("data:image/svg+xml,%3Csvg%20xmlns='http://www.w3.org/2000/svg'%20width='700'%20height='64'%20viewBox='0%200%20700%2064'%3E%3Cdefs%3E%3ClinearGradient%20id='g'%20x1='0'%20y1='0'%20x2='0'%20y2='1'%3E%3Cstop%20offset='0'%20stop-color='%23ffffff'%20stop-opacity='.18'/%3E%3Cstop%20offset='1'%20stop-color='%23ffffff'%20stop-opacity='0'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect%20x='0'%20y='0'%20width='700'%20height='10'%20fill='%23ffffff'%20opacity='.08'/%3E%3Cpath%20d='M0%2010%20C35%2010%2060%2048%2090%2048%20C120%2048%20120%2020%20155%2020%20C190%2020%20190%2060%20225%2060%20C260%2060%20260%2024%20295%2024%20C330%2024%20330%2052%20365%2052%20C400%2052%20405%2018%20440%2018%20C475%2018%20480%2046%20510%2046%20C540%2046%20540%2022%20575%2022%20C610%2022%20610%2058%20645%2058%20C670%2058%20685%2030%20700%2030%20V10%20Z'%20fill='url(%23g)'/%3E%3C/svg%3E");
 
-      --trees: url("data:image/svg+xml,%3Csvg%20xmlns='http://www.w3.org/2000/svg'%20width='240'%20height='240'%20viewBox='0%200%20240%20240'%3E%3Cg%20fill='none'%20stroke='%23ffffff'%20stroke-opacity='.10'%20stroke-width='6'%20stroke-linecap='round'%20stroke-linejoin='round'%3E%3Cpath%20d='M120%2032%20L82%2074%20h24%20L76%20114%20h30%20L88%20142%20h64%20l-18%20-28%20h30%20l-30%20-40%20h24z'/%3E%3Cpath%20d='M108%20142%20v22%20h24%20v-22'/%3E%3C/g%3E%3C/svg%3E");
-
+      /* garland wire (black-ish) */
       --garlandWire: url("data:image/svg+xml,%3Csvg%20xmlns='http://www.w3.org/2000/svg'%20width='1200'%20height='60'%20viewBox='0%200%201200%2060'%3E%3Cpath%20d='M0%2032%20C150%200%20300%2060%20450%2032%20C600%200%20750%2060%20900%2032%20C1050%200%201140%2046%201200%2032'%20fill='none'%20stroke='%23000000'%20stroke-opacity='.42'%20stroke-width='3'/%3E%3C/svg%3E");
     }
 
@@ -53,8 +50,8 @@
     body{
       margin:0;
       font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-      background: var(--bg);
       color: var(--text);
+      background: #05070d; /* fallback */
       line-height:1.7;
       touch-action: pan-y;
     }
@@ -63,40 +60,45 @@
     img{max-width:100%;height:auto;display:block}
     html{scroll-behavior:smooth}
 
-    /* background layers */
-    .bg{
-      position:fixed; inset:0; z-index:-12;
-      background:
-        radial-gradient(900px 520px at 20% 15%, rgba(11,92,255,.26), transparent 58%),
-        radial-gradient(900px 620px at 85% 80%, rgba(24,208,196,.18), transparent 60%),
-        radial-gradient(700px 480px at 70% 20%, rgba(126,84,255,.12), transparent 60%),
-        linear-gradient(180deg, #040611 0%, #05070d 65%, #040611 100%);
+    /* ✅ ОДНА ФОТКА ФОНОМ НА ВЕСЬ САЙТ */
+    .siteBg{
+      position:fixed; inset:0; z-index:-20;
+      background-image: url("hero-desktop.png");
+      background-size: cover;
+      background-repeat:no-repeat;
+      background-position: 78% 42%;
+      /* не затемняем */
+      filter: none;
+      transform: none;
     }
-    .trees{
-      position:fixed; inset:0; z-index:-11;
-      pointer-events:none;
-      opacity:.055;
-      background-image: var(--trees);
-      background-repeat: repeat;
-      background-size: 460px 460px;
-      background-position: 60px 200px;
-      mix-blend-mode: screen;
-      filter: blur(.05px);
+    /* Статично на десктопе */
+    @media (min-width: 980px){
+      .siteBg{ background-attachment: fixed; }
     }
-    .wolf-scratches{
-      position:fixed; inset:0; z-index:-10;
-      pointer-events:none;
-      opacity:.08;
-      background-image: var(--scratch);
-      background-repeat: repeat;
-      background-size: 520px 520px;
-      background-position: 80px 40px;
-      mix-blend-mode: screen;
-      transform: rotate(-6deg);
-      filter: blur(.12px);
+    /* На мобиле attachment fixed часто лагает — делаем scroll */
+    @media (max-width: 979px){
+      .siteBg{ background-attachment: scroll; }
     }
 
-    /* snow behind cards */
+    /* ✅ Мобильная картинка (пока hero.png, потом заменишь на твою 9:16) */
+    @media (max-width: 520px){
+      .siteBg{
+        background-image: url("hero.png"); /* позже заменим на hero-mobile.png */
+        background-position: 60% 40%;
+      }
+    }
+
+    /* Небольшая “вуаль” для читаемости текста (НЕ фон, НЕ градиентный задник, очень лёгкая) */
+    .siteVeil{
+      position:fixed; inset:0; z-index:-19;
+      pointer-events:none;
+      background:
+        radial-gradient(1200px 720px at 30% 35%, rgba(255,255,255,.10), rgba(255,255,255,0) 60%),
+        radial-gradient(900px 620px at 80% 70%, rgba(0,0,0,.18), rgba(0,0,0,0) 62%);
+      opacity:.45;
+    }
+
+    /* ✅ снег (за карточками) */
     .snow{
       position:fixed; inset:0; z-index:-9;
       pointer-events:none;
@@ -126,7 +128,7 @@
       position:sticky; top:0; z-index:50;
       backdrop-filter: blur(14px);
       -webkit-backdrop-filter: blur(14px);
-      background: rgba(5,7,13,.55);
+      background: rgba(5,7,13,.52);
       border-bottom:.5px solid var(--line);
       isolation:isolate;
       padding-bottom: 42px;
@@ -158,7 +160,6 @@
       filter:
         drop-shadow(0 14px 34px rgba(255,190,120,.18))
         drop-shadow(0 12px 30px rgba(255,150,90,.10));
-      opacity: 1;
     }
     .garlandStrip::before{
       content:"";
@@ -317,108 +318,13 @@
 
     /* HERO */
     .hero{
-      position:relative;
       padding:64px 0 44px;
       min-height: calc(100vh - 114px);
-      overflow:hidden;
-      isolation:isolate;
-    }
-
-    /* ✅ DESKTOP HERO: hero-desktop.png, static (fixed), no dark overlay */
-    .heroBg{
-      position:absolute; inset:0;
-      z-index:-5;
-      background-image: url("hero-desktop.png");
-      background-size: cover;
-      background-position: 78% 42%;
-      background-repeat:no-repeat;
-      transform: none; /* no scaling */
-      filter: none;    /* no darkening */
-    }
-    @media (min-width: 980px){
-      .heroBg{ background-attachment: fixed; } /* static on desktop */
-    }
-    @media (max-width: 979px){
-      .heroBg{ background-attachment: scroll; }
-    }
-
-    /* ✅ MOBILE пока оставляем hero.png (потом заменишь на 9:16) */
-    @media (max-width: 520px){
-      .heroBg{
-        background-image: url("hero.png");
-        background-position: 60% 40%;
-        background-attachment: scroll;
-      }
-    }
-
-    /* minimal premium highlight (does NOT darken) */
-    .heroShade{
-      position:absolute; inset:0;
-      z-index:-4;
-      pointer-events:none;
-      background:
-        radial-gradient(900px 420px at 35% 55%, rgba(255,255,255,.10), rgba(255,255,255,0) 60%);
-      opacity:.55;
-    }
-
-    /* bottom blend + seam blur (smooth transition) */
-    .heroBlend{
-      position:absolute;
-      left:-10%; right:-10%;
-      bottom:-1px;
-      height: 220px;
-      z-index:-3;
-      pointer-events:none;
-      background:
-        radial-gradient(1200px 240px at 55% 40%, rgba(126,84,255,.20), rgba(24,208,196,.12), rgba(5,7,13,0) 65%),
-        linear-gradient(180deg, rgba(5,7,13,0) 0%, rgba(5,7,13,.55) 70%, rgba(5,7,13,1) 100%);
-      opacity:.9;
-    }
-    .heroSeam{
-      position:absolute;
-      left:-8%;
-      right:-8%;
-      bottom:-1px;
-      height: 230px;
-      z-index:-2;
-      pointer-events:none;
-
-      backdrop-filter: blur(22px);
-      -webkit-backdrop-filter: blur(22px);
-
-      -webkit-mask-image: linear-gradient(180deg, transparent 0%, rgba(0,0,0,.25) 18%, rgba(0,0,0,.9) 72%, #000 100%);
-      mask-image: linear-gradient(180deg, transparent 0%, rgba(0,0,0,.25) 18%, rgba(0,0,0,.9) 72%, #000 100%);
-
-      background: linear-gradient(180deg, rgba(255,255,255,.06), rgba(255,255,255,0));
-      opacity: .9;
-    }
-    .heroFadeBottom{
-      position:absolute;
-      left:-10%;
-      right:-10%;
-      bottom:-1px;
-      height: 260px;
-      z-index:-1;
-      pointer-events:none;
-      background:
-        radial-gradient(1200px 220px at 60% 10%, rgba(255,255,255,.10), rgba(255,255,255,0) 62%),
-        linear-gradient(180deg,
-          rgba(4,7,18,0) 0%,
-          rgba(4,7,18,.18) 22%,
-          rgba(4,7,18,.52) 58%,
-          rgba(4,7,18,.92) 100%);
-      filter: blur(18px);
-      opacity: .98;
-    }
-
-    .heroGrid{
       display:grid;
-      grid-template-columns: 1fr;
-      justify-items:center;
-      gap:14px;
+      align-items:center;
     }
 
-    /* ✅ Cards (with glass blur restored) */
+    /* Cards */
     .card{
       border-radius:var(--radius);
       border:1px solid var(--line2);
@@ -435,6 +341,11 @@
 
       backdrop-filter: blur(16px) saturate(1.08);
       -webkit-backdrop-filter: blur(16px) saturate(1.08);
+    }
+    .card:hover{
+      transform: translateY(-4px);
+      box-shadow: var(--shadow2);
+      border-color: rgba(255,255,255,.18);
     }
     .cardGlow{
       position:absolute;
@@ -456,6 +367,13 @@
       pointer-events:none;
     }
     .tilt:hover .shine{opacity:.9}
+
+    .heroGrid{
+      display:grid;
+      grid-template-columns: 1fr;
+      justify-items:center;
+      gap:14px;
+    }
 
     .heroMain{
       width: min(980px, 100%);
@@ -482,6 +400,7 @@
       0%,100%{background-position:0% 50%}
       50%{background-position:100% 50%}
     }
+
     .lead{
       margin:0 auto 14px;
       color: rgba(238,242,255,.78);
@@ -563,20 +482,6 @@
       0%,100%{filter: saturate(1); box-shadow:0 18px 55px rgba(11,92,255,.20)}
       50%{filter: saturate(1.15); box-shadow:0 22px 70px rgba(11,92,255,.26)}
     }
-    .btn.primary::after{
-      content:"";
-      position:absolute;
-      inset:-70% -60%;
-      background: linear-gradient(90deg, transparent, rgba(255,255,255,.22), transparent);
-      transform: translateX(-70%) rotate(12deg);
-      opacity:0;
-      transition:.25s;
-      mix-blend-mode: screen;
-    }
-    .btn.primary:hover::after{
-      opacity:1;
-      transform: translateX(60%) rotate(12deg);
-    }
 
     .dot{
       width:10px;height:10px;border-radius:999px;
@@ -646,6 +551,7 @@
 
     .inner{padding:18px}
     .miniTitle{font-weight:1000; font-size:15px; color: rgba(238,242,255,.92); margin:0 0 10px}
+
     .step{
       display:flex; gap:12px;
       padding:12px;
@@ -772,6 +678,9 @@
       padding:34px 0 64px;
       color:rgba(238,242,255,.52);
       border-top:1px solid rgba(255,255,255,.10);
+      background: rgba(5,7,13,.10);
+      backdrop-filter: blur(8px);
+      -webkit-backdrop-filter: blur(8px);
     }
     .foot{display:flex; justify-content:space-between; align-items:flex-start; gap:14px; flex-wrap:wrap}
     .foot a{color:rgba(238,242,255,.70)}
@@ -803,7 +712,6 @@
       font-weight:1000;
       transition:.2s;
     }
-    .float:hover .go{transform: translateY(-1px)}
 
     .toast{
       position:fixed;left:50%;bottom:18px;transform: translateX(-50%);
@@ -862,12 +770,12 @@
       .snow{opacity:.12; animation-duration: 26s;}
     }
 
-    /* mobile performance */
+    /* mobile performance: no hover transforms, no "tap flash" */
     @media (hover: none), (pointer: coarse){
       .card:hover, .miniCard:hover{transform:none}
       .tilt:hover .shine{opacity:0}
       .btn:hover{transform:none}
-      .btn:active{transform:none} /* no "jump" on tap */
+      .btn:active{transform:none}
       .qbtn:hover{transform:none}
       .card{
         backdrop-filter: blur(12px) saturate(1.06);
@@ -879,21 +787,22 @@
       html{scroll-behavior:auto}
       .reveal{transition:none}
       .grad{animation:none}
-      .btn.primary::after{display:none}
       .snow{animation:none}
       .chip{animation:none}
       .card, .miniCard{transition:none}
       .garlandStrip::before, .garlandStrip::after{animation:none}
       .btn.primary{animation:none}
-      .heroBg{background-attachment: scroll;}
+      .siteBg{background-attachment: scroll;}
     }
   </style>
 </head>
 
 <body>
-  <div class="bg" aria-hidden="true"></div>
-  <div class="trees" aria-hidden="true"></div>
-  <div class="wolf-scratches" aria-hidden="true"></div>
+  <!-- ✅ ONE background photo for all site -->
+  <div class="siteBg" aria-hidden="true"></div>
+  <div class="siteVeil" aria-hidden="true"></div>
+
+  <!-- snow behind cards -->
   <div class="snow" aria-hidden="true"></div>
 
   <div class="progress" id="progress"></div>
@@ -951,12 +860,6 @@
 
   <main id="top">
     <section class="hero">
-      <div class="heroBg" aria-hidden="true"></div>
-      <div class="heroShade" aria-hidden="true"></div>
-      <div class="heroBlend" aria-hidden="true"></div>
-      <div class="heroSeam" aria-hidden="true"></div>
-      <div class="heroFadeBottom" aria-hidden="true"></div>
-
       <div class="wrap">
         <div class="heroGrid">
           <div class="card reveal tilt heroMain" data-tilt>
@@ -1407,7 +1310,7 @@
     });
     calc();
 
-    // About accordion: на ПК открыто, на телефоне закрыто
+    // About accordion: ПК открыто, телефон закрыто
     const aboutAcc = document.getElementById("aboutAcc");
     function syncAbout(){
       const isMobile = matchMedia("(max-width: 720px)").matches;
